2004-06-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/wnck-spec.scm (<wnck-wrapset>): fix dependency list.

2004-06-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/wnck-spec.scm (<wnck-wrapset>): Add #:dependencies.
	(initialize): Remove depends-on!

2004-06-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/Makefile.am: Update.

	* gnome/gw/wnck-spec.scm: New name (WAS: libwnck-spec.scm).

	* New file.
